# TreeLoc

./: .gitignore  CMakeLists.txt  README.md  tree_localization_main.cpp
config/: default.yaml
include/treeloc/: app.h  config.h  geometry.h  io.h  matching.h  types.h
src/: app.cpp  config.cpp  geometry.cpp  io.cpp  matching.cpp
